cmake_minimum_required(VERSION 3.7)
project(k-r-c-study)

set(CMAKE_C_STANDARD 99)

#set(SOURCE_FILES Chapter1/hello_world.c)
#set(SOURCE_FILES Chapter1/ex1-3.c)
#set(SOURCE_FILES Chapter1/ex1-4.c)
#set(SOURCE_FILES Chapter1/ex1-5.c)
#set(SOURCE_FILES Chapter1/ex1-6.c)
#set(SOURCE_FILES Chapter1/ex1-7.c)
#set(SOURCE_FILES Chapter1/ex1-8.c)
#set(SOURCE_FILES Chapter1/ex1-9.c)
#set(SOURCE_FILES Chapter1/ex1-10.c)
#set(SOURCE_FILES Chapter1/ex1-12.c)
#set(SOURCE_FILES Chapter1/ex1-13.c)
#set(SOURCE_FILES Chapter1/ex1-14.c)
#set(SOURCE_FILES Chapter1/ex1-15.c)
#set(SOURCE_FILES Chapter1/ex1-16.c)
#set(SOURCE_FILES Chapter1/ex1-17.c)
#set(SOURCE_FILES Chapter1/ex1-18.c)
#set(SOURCE_FILES Chapter1/ex1-19.c)
#set(SOURCE_FILES Chapter1/ex1-20.c)
#set(SOURCE_FILES Chapter1/ex1-21.c)
#set(SOURCE_FILES Chapter1/ex1-22.c)
set(SOURCE_FILES Chapter1/ex1-23.c)
add_executable(k-r-c-study ${SOURCE_FILES})